--- a/style.css
+++ b/style.css
@@ -34,3 +34,10 @@ p {
 #footer-text {
     background-color: rgb(0, 187, 255);
 }
+
+
+.b-example-divider {
+    height: 3rem;
+    border: solid white;
+    border-width: 1px 0;
+}
