--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ border: solid black 6px;
 /*Styling H2 Tag*/
 
 h2 {
-    color:darkblue;
+    color: black;
+    font:bold;
     font-size: 28pt;
 }
