--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ nav {
     background-color: rgb(0, 187, 255);
 }
 
+.navbar-brand{
+    font-size: 18pt;
+    margin-left: 175px;
+}
+
+.nav-link {
+    font-size:15pt;
+    margin-right:50px;
+}
+
 /*CSS für Karten von tierseite.html*/
 .card{
     width: 13rem;
